<resources>
    <string name="app_name"><b>Malappuram</b></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="aboutus">About Us</string>
    <string name="contactus">Contact Us</string>
    <string name="keep_in_toch">Keep In Touch With Us..</string>
    <string name="call_us">Call Us</string>
    <string name="categories">Categories</string>
    <string name="news">News</string>
    <string name="notifications">Notifications</string>
    <string name="browse_category"><b>Browse Categories</b></string>
    <string name="buy_sell">Buy/Sell</string>
    <string name="register"><b><u>Register</u></b></string>
    <string name="location"><b><u>Perinthalmanna</u></b></string>
    <string name="item_details"><b>Details</b></string>
    <string name="browse_categories"> Browse Categories </string>
    <string name="listItemName">List Item Name</string>
    <string name="getItemDetails">Get Details</string>
    <string name="other">Other</string>
</resources>
