<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <include layout="@layout/toolbar_searchbar"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_child"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_bottom_toolbar"
        android:layout_below="@+id/toolbar_search"
        android:layout_marginTop="120dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        android:layout_above="@+id/ll_bottom_toolbar"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>

    <LinearLayout
        android:id="@+id/ll_bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/white"
        android:weightSum="4">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:paddingRight="2dp"
            >
            <ImageButton
                android:id="@+id/iv_home"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:focusableInTouchMode="true"
                android:layout_marginTop="3dp"
                android:background="@drawable/home"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/home"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:textSize="12sp"
                android:layout_below="@+id/iv_home"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingRight="2dp"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/iv_categories_home"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:background="@drawable/category_red"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:textSize="12sp"
                android:layout_below="@id/iv_categories_home"
                android:textColor="@color/dark_grey"
                android:text="@string/categories"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingRight="2dp"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/iv_news"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:background="@drawable/news"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/iv_news"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:textSize="12sp"
                android:text="@string/news"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingRight="2dp"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/iv_notification"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:background="@drawable/notification"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_notification"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:textSize="12sp"
                android:text="@string/notifications"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
