<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.myworks.jithin.malappuram.MainActivity"
    tools:showIn="@layout/app_bar_main">
    <include layout="@layout/toolbar"/>
    <ImageView
        android:id="@+id/iv_city_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/cityapp_launcher"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"/>
    <RelativeLayout
        android:id="@+id/rl_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_city_logo"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle_background"
        android:layout_marginLeft="20dp">
    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:drawableLeft="@drawable/search"
        android:hint="search here"/>
    </RelativeLayout>
<LinearLayout
    android:id="@+id/ll_browse"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/rl_search"
    android:weightSum="2"
    android:layout_marginTop="40dp"
    android:orientation="horizontal"
    android:layout_marginBottom="60dp">
     <RelativeLayout
         android:id="@+id/rl_browse_categories"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:layout_weight="1"
         >
         <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/iv_browse_categories"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:src="@drawable/category_homepage"
             app:civ_border_width="2dp"
             android:layout_centerHorizontal="true"
             app:civ_border_color="@color/app_red"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="16dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/iv_browse_categories"
             android:text="@string/browse_categories"
             android:layout_centerHorizontal="true"
             android:paddingBottom="10dp"
             android:textSize="16sp"
             android:layout_marginTop="10dp"
             android:textColor="@color/dark_grey"
             />

     </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_buy_sell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="1">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/iv_point_interest"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/pointofinterest"
                app:civ_border_width="2dp"
                android:layout_centerHorizontal="true"
                app:civ_border_color="@color/app_red"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_point_interest"
                android:text="@string/buy_sell"
                android:layout_centerHorizontal="true"
                android:paddingBottom="10dp"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                />
        </RelativeLayout>
</LinearLayout>
    <!--Bottom Toolbar starts from here-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        android:layout_above="@+id/ll_bottom_toolbar"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>

    <LinearLayout
        android:id="@+id/ll_bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/white"
        android:weightSum="4">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:paddingRight="2dp"
            >
            <ImageButton
                android:id="@+id/iv_home"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:focusableInTouchMode="true"
                android:layout_marginTop="3dp"
                android:background="@drawable/home_red"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/home"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:textSize="12sp"
                android:layout_below="@+id/iv_home"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingRight="2dp"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/iv_categories_home"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:background="@drawable/category"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:textSize="12sp"
                android:layout_below="@id/iv_categories_home"
                android:textColor="@color/dark_grey"
                android:text="@string/categories"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingRight="2dp"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/iv_news"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:background="@drawable/news"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/iv_news"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:textSize="12sp"
                android:text="@string/news"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingRight="2dp"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/iv_notification"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:background="@drawable/notification"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_notification"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:textSize="12sp"
                android:text="@string/notifications"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
