<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.myworks.jithin.malappuram.profile.ProfileActivity">
<include layout="@layout/toolbar_searchbar"
    android:id="@+id/include"
    tools:layout_constraintTop_creator="1"
    tools:layout_constraintRight_creator="1"
    android:layout_height="0dp"
    tools:layout_constraintBottom_creator="1"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    tools:layout_constraintLeft_creator="1"
    android:layout_width="0dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/include"
        app:layout_constraintTop_toTopOf="@+id/include">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        android:layout_above="@+id/ll_bottom_toolbar"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>

    <LinearLayout
        android:id="@+id/ll_bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/white"
        android:weightSum="4">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:paddingRight="2dp"
            >
            <ImageButton
                android:id="@+id/iv_home"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:focusableInTouchMode="true"
                android:layout_marginTop="3dp"
                android:background="@drawable/home"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/home"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:textSize="12sp"
                android:layout_below="@+id/iv_home"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingRight="2dp"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/iv_categories_home"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:background="@drawable/category"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:textSize="12sp"
                android:layout_below="@id/iv_categories_home"
                android:textColor="@color/dark_grey"
                android:text="@string/categories"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingRight="2dp"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/iv_news"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:background="@drawable/news"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/iv_news"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:textSize="12sp"
                android:text="@string/news"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingRight="2dp"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/iv_notification"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:background="@drawable/notification"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_notification"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:textSize="12sp"
                android:text="@string/notifications"/>
        </RelativeLayout>
    </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
